@@ -162,7 +162,7 @@ href="../install">page de t&eacute;l&eacute;chargement</a>.
   un fichier <tt>.ly</tt>. Lors de l'ex&eacute;cution de LilyPond sur
   ce fichier, le code est transform&eacute; en notation musicale, qui
   peut &ecirc;tre &eacute;crite sur le disque aux formats PostScript
-  ou SVG, puis retraité vers les formats PDF ou PNG.
+  ou SVG, puis retrait&eacute; vers les formats PDF ou PNG.
 </p>
 
 <h3>Quel est le format de saisie&nbsp;?</h3>
@@ -206,39 +206,6 @@ Nous avons les exigences suivantes. Il doit
   vous emp&ecirc;che d'utiliser ces formats&nbsp;: des filtres
   existent qui permettent de convertir divers formats au format
   <tt>.ly</tt>.
-</p>
-
-<h3>Le format LilyPond utilise des accolades et des backslashes, il
-  s'agit donc de TeX, n'est-ce pas&nbsp;?</h3>
-
-<p>
-  Non. La syntaxe est compl&egrave;tement diff&eacute;rente. Tex est
-  un langage de macros, dans lequel chaque commande ou
-  caract&egrave;re peut &ecirc;tre red&eacute;fini. LilyPond
-  poss&egrave;de une syntaxe d'entr&eacute;e structur&eacute;e, sous
-  la forme d'une grammaire sans contexte. Ainsi il est moins flexible,
-  mais il est aussi plus difficile de commettre des erreurs.
-</p>
-<p>
-  LilyPond peut g&eacute;n&eacute;rer la notation au format TeX, pour
-  &ecirc;tre compil&eacute; par LaTeX.
-</p>
-
-<h3>LilyPond est li&eacute; &agrave; la musique et &agrave; TeX, c'est
-donc MusicTeX&nbsp;?</h3>
-
-<p>
-  Non. Il existe un ensemble de macros TeX (MusicTeX, MusixTeX,
-  OpusTeX, MuTex) permettant d'&eacute;diter de la musique. Il n'y a
-  aucun lien entre ces logiciels et LilyPond&nbsp;: ils ne sont pas
-  n&eacute;cessaires &agrave; l'ex&eacute;cution de LilyPond.
-</p>
-<p>
-  Avant LilyPond, nous avons d&eacute;velopp&eacute; MPP, un
-  pr&eacute;processeur pour MusicTeX. Cependant, nous l'avons
-  abandonn&eacute; en 1996, apr&egrave;s avoir conclu qu'une bonne
-  mise en page automatis&eacute;e n'&eacute;tait pas r&eacute;alisable
-  avec MusicTeX.
 </p>
 
 
