@@ -24,7 +24,7 @@
     Lisez l'<a href="../switch/">introduction</a>&nbsp;;
   </li>
 
-  <li>Des questions&nbsp;? Jetez un oeil &agrave la  <a href="faq.html">FAQ</a>&nbsp;;
+  <li>Des questions&nbsp;? Jetez un oeil &agrave; la  <a href="faq.html">FAQ</a>&nbsp;;
   </li>
 
   <li>Int&eacute;ress&eacute; par des informations plus approfondies&nbsp;? Lisez notre
