@@ -13,18 +13,20 @@
 
 <li>Han-Wen Nienhuys et Jan Nieuwenhuizen, d&eacute;veloppement du noyau
 <p>
-Jan est actuellement d&eacute;veloppeur et sp&eacute;cialiste en
-logiciels libres.  Il est altiste. Han-Wen monte une
-soci&eacute;t&eacute; de promotion de LilyPond.  Il consacre son temps
-libre &agrave; la pratique du cor.
+Jan est actuellement sp&eacute;cialiste en d&eacute;veloppement de
+solutions &laquo;&nbsp;Open Source&nbsp;&raquo;. Il est altiste. Han-Wen monte
+une soci&eacute;t&eacute; de promotion de LilyPond.  Il consacre son
+temps libre &agrave; la pratique du cor.
 <p>
 <p>
-Jan et Han-Wen se sont rencontrés au sein d'un orchestre de jeunes.
-Jan bricolait des préprocesseurs MusicTex, ce qui intéressa Han-Wen.
-Une fois tous deux impliqués, Jan et Han-Wen ont décidé de redémarrer
-avec une approche complètement différente. C'est ainsi qu'est né LilyPond.
+Jan et Han-Wen se sont rencontr&eacute;s au sein d'un orchestre de
+jeunes en Hollande.  Jan bricolait des pr&eacute;processeurs MusicTex.
+Quand Han-Wen a mis le doigt dans l'engrenage, ils
+d&eacute;cid&egrave;rent de red&eacute;marrer avec une approche
+compl&egrave;tement diff&eacute;rente. C'est ainsi qu'est n&eacute;
+LilyPond.
 <p>
-  <a href="name.html">L'origine</a> du nom &lsquo;LilyPond&rsquo;
+  <a href="name.html">Des origines</a> du nom &lsquo;LilyPond&rsquo;
 
 
 <li>Graham Percival, &eacute;diteur de la documentation
