@@ -25,7 +25,7 @@
               <b>
 	  LilyPond 2.7</b>
     </a>
-    (développement)
+    (d&eacute;veloppement)
   </li>
   <li>
     Documentation pour
@@ -62,19 +62,19 @@
 
 <h2><em>LilyPond Snippet Repository</em></h2>
 
-Le <a href="http://lsr.dsi.unimi.it/"><em>Lilypond Snippet
-Repository (LSR)</em></a> est une base de données de recherche d'extraits
+Le <a href="http://lsr.dsi.unimi.it/"><em>Lilypond Snippet Repository
+(LSR)</em></a> est une base de donn&eacute;es de recherche d'extraits
 de code pour LilyPond. Les utilisateurs peuvent consulter, rechercher
 et contribuer en ajoutant leurs propres extraits de code.
 
 
 <h2>Documentation locale</h2>
 
-La documentation est installée dans le dossier
+La documentation est install&eacute;e dans le dossier
 <pre>
   <a
 href="file:///usr/share/doc/lilypond/">/usr/share/doc/lilypond</a>
-</pre> Il se peut que vous ayez à installer un paquet additionnel tel
+</pre> Il se peut que vous ayez &agrave; installer un paquet additionnel tel
 que <tt>lilypond-doc</tt>.
 
 
