@@ -163,7 +163,7 @@ Le fichier sera alors compil&eacute;, et le r&eacute;sultat affich&eacute; dans 
 
 	  <li>
 	    Pour chaque paquet que vous souhaitez d&eacute;sinstaller,
-	    Cliquez sur la double fl&eagrave;che jusqu'&agrave; l'affichage de <strong>Uninstall</strong>&nbsp;
+	    Cliquez sur la double fl&egrave;che jusqu'&agrave; l'affichage de <strong>Uninstall</strong>&nbsp;
 	  </li>
 
 	  <li>
