@@ -1,3 +1,7 @@
+2005-11-28  Jean-Charles Malahieude  <lilyfan@wanadoo.fr>
+
+	* fr/about/*, fr/index.html, fr/documentation.html: corrections
+
 2005-11-28  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>
 
 	* site/about/name.html: add header (for translation).
